[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
pallas-network = "0.32.0"
hex = "0.4.3"
