[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.3.1", default-features = false, features = ['std'] }
amaru-kernel = { git = "https://github.com/pragma-org/amaru.git" }
amaru-ledger = { git = "https://github.com/pragma-org/amaru.git" }
